--- a/src/main/resources/templates/gr/admin/footer.html
+++ b/src/main/resources/templates/gr/admin/footer.html
@@ -30,11 +30,11 @@
                 border-top: 1px solid gray;
             }
 
-            .container{
+            .footer_container{
                 text-align: center;
                 color: gray;
                 /* padding-top: 20px; */
-                display: inline-block;
+                /* display: inline-block; */
             }
 
             #backToTopBtn{
@@ -64,7 +64,7 @@
 
 <th:block th:fragment="footerHTML">
     <footer class="text-body-secondary py-5">
-        <div class="container text-center">
+        <div class="footer_container text-center">
             <div class="d-flex justify-content-center">
                 <p class="text-center" style="margin-left: 600px;padding-top: 20px;">    
                     새로운 1인 공구문화 &copy; 소분소분
