--- a/src/main/resources/templates/jk/seller/home.html
+++ b/src/main/resources/templates/jk/seller/home.html
@@ -49,37 +49,89 @@
             <main>
                 <div class="container-fluid" style="padding: 3%;">
                     <div class="row">
-                        <div class="col-ml-12">
+                        <div class="col-ml-12" id="guideCardBody" hidden>
                             <div class="card mb-4">
-                                <div class="card-body" id="guideCardBody">
+                                <div class="card-body">
                                     <!-- 사이트 이용 설명을 위한 버튼 -->
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guideModal">
+                                    <img th:src="@{/images/jk/logo2.png}" style="width: 10%;" alt="로고 이미지" />
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                        data-bs-target="#modal1">
                                         가이드 보기
                                     </button>
-                                
+
                                     <!-- 오늘 하루 그만보기 버튼 -->
-                                    <button type="button" class="btn btn-secondary float-end" id="hideGuideBtn">
-                                        오늘하루 그만보기
-                                    </button>
-                                
-                                    <!-- 모달 창 -->
-                                    <div class="modal fade" id="guideModal" tabindex="-1" aria-labelledby="guideModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered">
+                                    <a href="#" id="hideGuideBtn" class="float-end">오늘하루 그만보기 <i
+                                            class="fas fa-xmark"></i></a>
+
+                                    <!-- 모달 1 -->
+                                    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" id="guideModalLabel">사이트 이용 가이드</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    <h5 class="modal-title" id="modal1Label">사이트 이용 가이드</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <!-- 가이드 내용 -->
-                                                    <p>사이트 이용 설명을 여기에 작성합니다.</p>
+                                                    <p>모달 1 내용</p>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                                                    <button type="button"
+                                                        class="btn btn-secondary prevModalButton">이전으로</button>
+                                                    <button type="button"
+                                                        class="btn btn-primary nextModalButton">다음으로</button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+
+                                    <!-- 모달 2 -->
+                                    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="modal2Label">사이트 이용 가이드</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>모달 2 내용</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button"
+                                                        class="btn btn-secondary prevModalButton">이전으로</button>
+                                                    <button type="button"
+                                                        class="btn btn-primary nextModalButton">다음으로</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- 모달 3 -->
+                                    <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modal3Label"
+                                        aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="modal3Label">사이트 이용 가이드</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>모달 3 내용</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button"
+                                                        class="btn btn-secondary prevModalButton">이전으로</button>
+                                                    <button type="button"
+                                                        class="btn btn-primary nextModalButton">다음으로</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -200,35 +252,61 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
 
     <script>
-        // // 페이지 로드 시, 저장된 값 확인하여 가이드 숨기기
-        // window.onload = function () {
-        //     var hideGuideUntil = localStorage.getItem('hideGuideUntil');
-        //     var now = new Date().getTime();
+        var modalCount = 3; // 모달 창 개수
+        var currentModal = 1; // 현재 모달 창 번호
 
-        //     if (hideGuideUntil && now < hideGuideUntil) {
-        //         var guideCardBody = document.getElementById('guideCardBody');
-        //         guideCardBody.style.display = 'none';
-        //     }
-        // };
+        // "다음으로" 버튼 클릭 시 다음 모달 창으로 이동
+        $('.nextModalButton').click(function () {
+            if (currentModal < modalCount) {
+                $('#modal' + currentModal).modal('hide');
+                currentModal++;
+                $('#modal' + currentModal).modal('show');
+            }
+        });
 
-        // // 오늘 날짜의 자정 시간을 구하는 함수
-        // function getMidnightTime() {
-        //     var now = new Date();
-        //     var midnight = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, 0, 0, 0);
-        //     return midnight.getTime();
-        // }
+        // "이전으로" 버튼 클릭 시 이전 모달 창으로 이동
+        $('.prevModalButton').click(function () {
+            if (currentModal > 1) {
+                $('#modal' + currentModal).modal('hide');
+                currentModal--;
+                $('#modal' + currentModal).modal('show');
+            }
+        });
 
-        // // 오늘 하루 그만보기 버튼 클릭 시, 가이드 숨기기
-        // document.getElementById('hideGuideBtn').addEventListener('click', function () {
-        //     var guideCardBody = document.getElementById('guideCardBody');
-        //     guideCardBody.style.display = 'none';
 
-        //     // 오늘 날짜의 자정 시간을 구하고, localStorage에 저장
-        //     var midnightTime = getMidnightTime();
-        //     localStorage.setItem('hideGuideUntil', midnightTime);
-        // });
 
-        
+
+        // 페이지 로드 시, 저장된 값 확인하여 가이드 숨기기
+        window.onload = function () {
+            var hideGuideUntil = localStorage.getItem('hideGuideUntil');
+            var now = new Date().getTime();
+            var guideCardBody = document.getElementById('guideCardBody');
+
+            if (hideGuideUntil && now < hideGuideUntil) {
+                guideCardBody.hidden = false;
+            } else {
+                guideCardBody.hidden = false;
+            }
+        };
+
+        // 오늘 날짜의 자정 시간을 구하는 함수
+        function getMidnightTime() {
+            var now = new Date();
+            var midnight = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, 0, 0, 0);
+            return midnight.getTime();
+        }
+
+        // 오늘 하루 그만보기 버튼 클릭 시, 가이드 숨기기
+        document.getElementById('hideGuideBtn').addEventListener('click', function () {
+            var guideCardBody = document.getElementById('guideCardBody');
+            guideCardBody.style.display = 'none';
+
+            // 오늘 날짜의 자정 시간을 구하고, localStorage에 저장
+            var midnightTime = getMidnightTime();
+            localStorage.setItem('hideGuideUntil', midnightTime);
+        });
+
+
 
 
 
