--- a/src/main/resources/templates/gr/admin/footer.html
+++ b/src/main/resources/templates/gr/admin/footer.html
@@ -21,12 +21,12 @@
                 margin: 0 auto;
                 /* font-family: 'nanumsquare','MinSans-Regular', sans-serif; */
                 font-family: 'NanumSquare';
-                font-size: 15px;
+                font-size: 13px;
             }
 
             footer{
                 width: 100%;
-                height: 70px;
+                height: 55px;
                 border-top: 1px solid gray;
             }
 
@@ -66,12 +66,12 @@
     <footer class="text-body-secondary py-5">
         <div class="container text-center">
             <div class="d-flex justify-content-center">
-                <p class="text-center" style="margin-left: 600px;padding-top: 20px;">    
+                <p class="text-center" style="margin-left: 60px;padding-top: 20px;">    
                     새로운 1인 공구문화 &copy; 소분소분
                 </p>
             </div>
         </div>
-        <div class="button">
+        <div class="button" style="margin-right: 20px;">
             <button id="backToTopBtn" onclick="scrollToTop()">Top</button>
         </div>
     </footer>
