--- a/src/main/resources/templates/gr/admin/customer.html
+++ b/src/main/resources/templates/gr/admin/customer.html
@@ -21,6 +21,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
         integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <style>
+        .box{
+            width: 1300px;
+            margin: 0 auto; /* 가운데 정렬 */
+            display: flex;
+            align-items: center;
+
+        }
+
+        .title{
+            width: 1300px;
+            height: 41px;
+            position: relative;
+            border-bottom: 3px solid #333;
+            padding-bottom: 60px;
+            padding-top: 37px;
+            padding-left: 20px;
+        }
+
+        .title h3{
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .card{
+            width: 1300px;
+            padding-top: 0px;
+            border-radius: none;
+            border: none;
+        }
+
+        .card-body{
+        }
+    </style>
      
     
 </head>
@@ -31,13 +66,13 @@
 
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
     <div style="padding-bottom: 300px;">
-        <div class="row">
+        <div class="box row">
             <div class="col">
+                <div class="title">
+                    <h3>고객 관리</h3>
+                </div>
                 <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-table me-1"></i>
-                        등록된 물품 내역
-                    </div>
+                   
                     <div class="card-body">
                         <table id="datatablesSimple" class="table">
                             <thead>
@@ -63,7 +98,7 @@
                                     <td th:text="${obj.gender}"></td>
                                     <td th:text="${obj.regdate}"></td>
                                     <td th:text="${obj.quitchk}"></td>
-                                    <td th:text="${obj.blockchk}"></td>
+                                    <td th:text="${obj.blockchk}"><input type="checkbox" /></td>
                                 </tr>
                             </tbody>
                         </table>
