--- a/src/main/resources/static/css/mj/seller.css
+++ b/src/main/resources/static/css/mj/seller.css
@@ -12,6 +12,7 @@ body {
 }
 
 
+
 hr {
     margin: 1rem 0;
     color: inherit;
@@ -385,7 +386,8 @@ ul {
 /* 메인화면 */
 
 main {
-    margin: 20px;
+    margin: 0 100px 0 100px;
+    min-width: 1000px;
 }
 
 main h3 {
@@ -443,7 +445,10 @@ main h3 {
     display: none;
 }
 
-
+/* 상세이미지 */
+.card-detailImage {
+    display: inline-block;
+}
 
 /* input[type="file" i] {
     appearance: none;
