--- a/src/main/resources/templates/mj/seller/iteminsert.html
+++ b/src/main/resources/templates/mj/seller/iteminsert.html
@@ -44,7 +44,7 @@
                         <h3 style="float: left;">물품등록</h3>
                         <a th:href="@{/seller/item/management.do}"><button class="btn btn-dark"  style="float: right; margin-top: 15px;">물품리스트</button></a>
                     </div>
-                    <hr>
+                    <hr style="margin-top: 8px;">
                     <!-- <form th:action="@{/seller/item/insert.do}" method="post"> -->
                         
                         <div class="input-group mb-3">
