--- a/src/main/resources/templates/mj/seller/itemimage/selectlist.html
+++ b/src/main/resources/templates/mj/seller/itemimage/selectlist.html
@@ -67,26 +67,18 @@
                     <form th:action="@{/seller/itemimage/deleteimage.do}" method="post" id="form2">
                         <button class="btn btn-outline-dark" type="button" onclick="deleteimages()">선택삭제</button>
                         <!-- <input type="submit" value="선택삭제"> -->
+                        <div>
+                            <div th:each="tmp : ${imageList}" class="card-detailImage" style="width: 200px; height: 250px;">
+                                <input type="hidden" name="item.no" th:value="${item.no}" />
+                                <input type="checkbox" name="imageno" id="imageno" th:value="${tmp[0]}" onclick="getimageNo()">
+                                <label>[[${tmp[0]}]]</label><br>
+                                <img th:src="${tmp[1]}" class="detailimage">
+                            </div>
+                            
 
+                        </div>
 
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th><input type="hidden" value="물품번호" /></th>
-                                    <th>선택</th>
-                                    <th>이미지번호</th>
-                                    <th>이미지</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="tmp : ${imageList}">
-                                    <td><input type="hidden" name="item.no" th:value="${item.no}" /></td>
-                                    <td><input type="checkbox" name="imageno" id="imageno" th:value="${tmp[0]}" onclick="getimageNo()"></td>
-                                    <td><label>[[${tmp[0]}]]</label></td>
-                                    <td><img th:src="${tmp[1]}" class="detailimage"></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        
 
                     </form>
 
