--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -39,54 +39,58 @@
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
             <main>
-                <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
+                <div class="container-fluid px-4" > <!-- 옆쪽에 딱 붙음. -->
 
 
                     <h3>물품관리</h3>
-                    <form th:action="@{/seller/item/management.do}" method="get" th:object="${cate}">
+                    <div>
 
-
-                        대분류
-                        <select class="form-select" aria-label="Default select example" id="LcateSelect"
-                            th:field="${cate.Lcode}" onchange="updateMcateSelect()">
-                            <option value="000">전체</option>
-                            <option th:each="obj : ${cate.Llist}" th:value="${obj.code.longValue()}"
-                                th:text="${obj.name}"></option>
-                        </select>
-
-                        중분류
-                        <select class="form-select" aria-label="Default select example" id="McateSelect"
-                            th:field="${cate.Mcode}" onchange="updateScateSelect()">
-                            <option value="000">전체</option>
-                            <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}"
-                                th:text="${obj1.name}"></option>
-                        </select>
-
-                        소분류
-                        <select class="form-select" aria-label="Default select example" id="ScateSelect"
-                            th:field="${cate.Scode}" onchange="updateUrl()">
-                            <option value="000">전체</option>
-                            <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}"
-                                th:text="${obj2.name}"></option>
-                        </select>
-                    </form>
-                    <hr>
-                    <!------------------------------------------------------------------- -->
-
-                    <!-- <form th:action="@{/seller/item/deleteitem.do}" method="post">
+                        <form th:action="@{/seller/item/management.do}" method="get" th:object="${cate}" style="float: left;">
+    
+    
+                            대분류
+                            <select class="form-select" aria-label="Default select example" id="LcateSelect"
+                                th:field="${cate.Lcode}" onchange="updateMcateSelect()">
+                                <option value="000">전체</option>
+                                <option th:each="obj : ${cate.Llist}" th:value="${obj.code.longValue()}"
+                                    th:text="${obj.name}"></option>
+                            </select>
+    
+                            중분류
+                            <select class="form-select" aria-label="Default select example" id="McateSelect"
+                                th:field="${cate.Mcode}" onchange="updateScateSelect()">
+                                <option value="000">전체</option>
+                                <option th:each="obj1 : ${cate.Mlist}" th:value="${obj1.code.longValue()}"
+                                    th:text="${obj1.name}"></option>
+                            </select>
+    
+                            소분류
+                            <select class="form-select" aria-label="Default select example" id="ScateSelect"
+                                th:field="${cate.Scode}" onchange="updateUrl()">
+                                <option value="000">전체</option>
+                                <option th:each="obj2 : ${cate.Slist}" th:value="${obj2.code.longValue()}"
+                                    th:text="${obj2.name}"></option>
+                            </select>
+                        </form>
                         
+                        <!------------------------------------------------------------------- -->
+    
+                        <!-- <form th:action="@{/seller/item/deleteitem.do}" method="post">
+                            
+                            <input type="hidden" name="btn" id="btn"/>
+                            <a th:href="@{/seller/item/insert.do}"><button class="btn btn-primary">물품등록</button></a>
+                            <button class="btn btn-primary" value="일괄수정" onclick="updateItemAction()">수정</button>
+                            <button class="btn btn-primary" value="일괄삭제" onclick="deleteItemAction()">삭제</button>
+                        </form> -->
                         <input type="hidden" name="btn" id="btn"/>
-                        <a th:href="@{/seller/item/insert.do}"><button class="btn btn-primary">물품등록</button></a>
-                        <button class="btn btn-primary" value="일괄수정" onclick="updateItemAction()">수정</button>
-                        <button class="btn btn-primary" value="일괄삭제" onclick="deleteItemAction()">삭제</button>
-                    </form> -->
-                    <input type="hidden" name="btn" id="btn"/>
-                    <div style="padding-bottom: 10px;">
-                        <a th:href="@{/seller/item/insert.do}" class="btn-find"><button class="btn btn-outline-dark btn-find">물품등록</button></a>
-                        <button class="btn btn-outline-dark btn-find" value="일괄수정" onclick="formAction1(1)">수정</button>
-                        <button style="display: none;" class="btn btn-outline-dark btn-find" value="일괄삭제" onclick="formAction1(2)">삭제</button>
-
+                        <div style="float: right;">
+                            <a th:href="@{/seller/item/insert.do}" class="btn-find"><button class="btn btn-outline-dark btn-find">물품등록</button></a>
+                            <button class="btn btn-outline-dark btn-find" value="일괄수정" onclick="formAction1(1)">수정</button>
+                            <button style="display: none;" class="btn btn-outline-dark btn-find" value="일괄삭제" onclick="formAction1(2)">삭제</button>
+    
+                        </div>
                     </div>
+                    <hr>
             
                         
                     <form th:action="@{/seller/item/management.do}" method="post" id="form2">
