--- a/src/main/resources/templates/jk/seller/home.html
+++ b/src/main/resources/templates/jk/seller/home.html
@@ -49,19 +49,29 @@
             <main>
                 <div class="container-fluid" style="padding: 3%;">
                     <div class="row">
-                        <div class="col-ml-12" id="guideCardBody" hidden>
+                        <div class="col-ml-12" id="guideCardBody" >
                             <div class="card mb-4">
-                                <div class="card-body">
+                                <div class="card-body" >
                                     <!-- 사이트 이용 설명을 위한 버튼 -->
-                                    <img th:src="@{/images/jk/logo2.png}" style="width: 10%;" alt="로고 이미지" />
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                        data-bs-target="#modal1">
-                                        가이드 보기
-                                    </button>
-
-                                    <!-- 오늘 하루 그만보기 버튼 -->
                                     <a href="#" id="hideGuideBtn" class="float-end">오늘하루 그만보기 <i
                                             class="fas fa-xmark"></i></a>
+                                    <div class="d-flex">
+                                        <img th:src="@{/images/jk/info.png}" style="width: 8%; padding: 10px;"
+                                            alt="정보아이콘" />
+
+                                        <div class="ms-3">
+
+                                            <p style="margin: 20px;  font-weight: 600; font-size: 20px;">도움말이 필요하시다면 <a
+                                                    href="#" data-bs-toggle="modal" data-bs-target="#modal1"
+                                                    style="font-size: 30px; color: rgb(19, 74, 255); font-weight: 900;">여기</a>를
+                                                눌러주세요!</p>
+                                        </div>
+                                    </div>
+
+                                    <!-- 오늘 하루 그만보기 버튼 -->
+
+
+
 
                                     <!-- 모달 1 -->
                                     <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label"
@@ -77,8 +87,7 @@
                                                     <p>모달 1 내용</p>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button"
-                                                        class="btn btn-secondary prevModalButton">이전으로</button>
+
                                                     <button type="button"
                                                         class="btn btn-primary nextModalButton">다음으로</button>
                                                 </div>
@@ -125,8 +134,7 @@
                                                 <div class="modal-footer">
                                                     <button type="button"
                                                         class="btn btn-secondary prevModalButton">이전으로</button>
-                                                    <button type="button"
-                                                        class="btn btn-primary nextModalButton">다음으로</button>
+
                                                 </div>
                                             </div>
                                         </div>
@@ -140,9 +148,9 @@
                         <div class="col-ml-12">
                             <div class="card mb-4">
                                 <div class="card-body">
-                                    <p style="margin: 20px; margin-top: 40px; font-weight: 500; font-size: 45px;">
-                                        <strong>상품을 바로
-                                            등록하시겠어요?</strong>
+                                    <p style="margin: 20px; margin-top: 20px; font-weight: 500; font-size: 45px;">
+                                        <strong>상품 바로
+                                            등록하기</strong>
                                     </p>
                                     <div class="px-4 " style="font-weight: 600;">
                                         <p id="divContnent" class="mb-1"
@@ -189,10 +197,11 @@
                                             style="width: 30%; border-radius: 10px; border:1px; margin: 20px;">
                                         <div class="ms-3">
                                             <!-- <img th:src="${imageUrl}" alt="상품 사진" style="width: 30%; border-radius: 10px; border:1px; margin: 20px;">  와 같은-->
-                                            <p id="divContnent" th:text=" '상품명 : ' +  ${itemName}"
-                                                style="margin: 20px;">
+                                            <p id="divContnent" th:text=" '상품명 : '" style="margin: 20px;"></p>
+                                            <p id="divContnent" th:text="${itemName}" style="margin: 20px;"></p>
                                             <p id="divContnent" th:text=" '지금까지 총 ' +  ${soldCount} +'개 팔렸습니다!'"
                                                 style="margin: 20px;"></p>
+
                                         </div>
                                     </div>
                                 </div>
@@ -202,8 +211,7 @@
                             <div class="card mb-4">
                                 <div class="card-body" style="font-weight: 600;">
                                     <p style="margin: 20px; font-weight: 600; font-size: 26px;">
-                                        <strong>이번 달에
-                                            가장 많이 팔린 상품들이에요!</strong>
+                                        <strong>가장 많이 팔린 상품들이에요!</strong>
                                     </p>
                                     <br>
                                     <!-- 표가 들어갈 자리 -->
@@ -213,7 +221,7 @@
                                                 <div class="card mb-4">
                                                     <div class="card-header" sty> <!-- header 부분 지우고 내용만 포함해도 됨. -->
                                                         <!-- <i class="fas fa-chart-area me-1"></i> -->
-                                                        이달의 HOT Item Top 3
+                                                        HOT Item Top 3
                                                     </div>
                                                     <div class="card-body">
                                                         <canvas id="myBarChart2" width="100%" height="30"></canvas>
@@ -278,14 +286,14 @@
 
         // 페이지 로드 시, 저장된 값 확인하여 가이드 숨기기
         window.onload = function () {
-            var hideGuideUntil = localStorage.getItem('hideGuideUntil');
+            var hideGuideUntil = getCookie('hideGuideUntil');
             var now = new Date().getTime();
             var guideCardBody = document.getElementById('guideCardBody');
 
             if (hideGuideUntil && now < hideGuideUntil) {
-                guideCardBody.hidden = false;
+                guideCardBody.style.display = 'none';
             } else {
-                guideCardBody.hidden = false;
+                guideCardBody.style.display = 'block';
             }
         };
 
@@ -296,22 +304,43 @@
             return midnight.getTime();
         }
 
+        // Cookie를 설정하는 함수
+        function setCookie(name, value, days) {
+            var expires = '';
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                expires = '; expires=' + date.toUTCString();
+            }
+            document.cookie = name + '=' + value + expires + '; path=/';
+        }
+
+        // Cookie를 가져오는 함수
+        function getCookie(name) {
+            var nameEQ = name + '=';
+            var ca = document.cookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) === ' ') {
+                    c = c.substring(1, c.length);
+                }
+                if (c.indexOf(nameEQ) === 0) {
+                    return c.substring(nameEQ.length, c.length);
+                }
+            }
+            return null;
+        }
+
         // 오늘 하루 그만보기 버튼 클릭 시, 가이드 숨기기
         document.getElementById('hideGuideBtn').addEventListener('click', function () {
             var guideCardBody = document.getElementById('guideCardBody');
             guideCardBody.style.display = 'none';
 
-            // 오늘 날짜의 자정 시간을 구하고, localStorage에 저장
+            // 오늘 날짜의 자정 시간을 구하고, Cookie에 저장
             var midnightTime = getMidnightTime();
-            localStorage.setItem('hideGuideUntil', midnightTime);
+            setCookie('hideGuideUntil', midnightTime, 1);
         });
-
-
-
-
-
-
-
+        
         $(document).ready(function () {
             const sidebarToggle = $('#sidebarToggle');
             if (sidebarToggle) {
