--- a/src/main/resources/templates/ikh/seller/item/search.html
+++ b/src/main/resources/templates/ikh/seller/item/search.html
@@ -131,8 +131,7 @@
                                                     <td th:text="${#dates.format(obj.itemregdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>                                           
                                                     <td>
                                                         <a th:href="@{/seller/item/searchdetail.do(itemno=${obj.itemno})}">
-                                                            <button class="btn btn-dark"
-                                                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                                            <button class="btn btn-dark">                                                                    
                                                                     상세
                                                             </button>
                                                         </a>
