--- a/src/main/resources/templates/se/customer/header.html
+++ b/src/main/resources/templates/se/customer/header.html
@@ -251,14 +251,7 @@
             margin-left: 8px;
         }
 
-        .notiAction {
-            width: 48px;
-            height: 48px;
-            background-color: rgba(105, 146, 120, 0.8);
-            border-radius: 24px;
-        }
-
-        .notiAction1 {
+        .onmessage {
             position: absolute;
             width: 7px;
             height: 7px;
@@ -270,7 +263,29 @@
             display: none;
         }
 
-        .notiBtn svg {
+        /* 알람창 */
+        .notibox {
+            display: none;
+            padding: 15px;
+            width: 300px;
+            max-height: 500px;
+            overflow-y: scroll;
+            top: 110px;
+            right: 80px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 5px;
+            box-shadow:  0 .125rem .25rem rgba(0, 0, 0, .075);
+            color: #204710;
+        }
+
+        .notibox::-webkit-scrollbar { /* 스크롤 숨기기 */
+            display: none; /* 크롬, 사파리, 오페라, 엣지 */
+        }
+
+        .notiLine {
+            margin: 10px 0 10px 0;
+            width: 250px;
+            border-bottom: 1px solid #dce2dd;
         }
 
         </style>
@@ -307,8 +322,7 @@
                 <div class="myPage col d-flex align-items-center flex-row-reverse">
                     <div class="row d-flex justify-content-end">
                         <th:block th:if="${user} != null">
-                            <div class="col-auto d-flex align-items-center">
-                                <th:block th:text="${user.username}"></th:block>
+                            <div class="col-auto d-flex align-items-center position-relative">
                                 <button type="button" class="logoutBtn" th:onclick="logoutAction([[${user.username}]])">로그아웃</button>
                             </div>
                             <div class="col-auto">
@@ -317,10 +331,13 @@
                                     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #204710;"><path d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path></svg> -->
                                 </a>
                                 <!-- 알림 -->
-                                <button type="button" class="notiBtn" id="notiBtn">
-                                    <div class="notiAction1"></div>
+                                <button type="button" class="notiBtn" id="notiBtn" onclick="notiAction()">
+                                    <div class="onmessage"></div>
                                     <svg class="mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #204710;"><path d="M8 16a2 2 0 0 0 1.985-1.75c.017-.137-.097-.25-.235-.25h-3.5c-.138 0-.252.113-.235.25A2 2 0 0 0 8 16ZM3 5a5 5 0 0 1 10 0v2.947c0 .05.015.098.042.139l1.703 2.555A1.519 1.519 0 0 1 13.482 13H2.518a1.516 1.516 0 0 1-1.263-2.36l1.703-2.554A.255.255 0 0 0 3 7.947Zm5-3.5A3.5 3.5 0 0 0 4.5 5v2.947c0 .346-.102.683-.294.97l-1.703 2.556a.017.017 0 0 0-.003.01l.001.006c0 .002.002.004.004.006l.006.004.007.001h10.964l.007-.001.006-.004.004-.006.001-.007a.017.017 0 0 0-.003-.01l-1.703-2.554a1.745 1.745 0 0 1-.294-.97V5A3.5 3.5 0 0 0 8 1.5Z"></path></svg>
                                 </button>
+                            </div>
+                            <div class="position-absolute notibox" id="notibox">
+                                
                             </div>
                         </th:block>
                         <th:block th:if="${user} == null">
@@ -483,6 +500,7 @@
         
 
         // 알림기능 ----------------------------------------------------------------------------------
+        // 1) 메세지 받기
         var user = /*[[${user}]]*/"";
 
         if(user){
@@ -492,10 +510,43 @@
 
             eventSource.onmessage = (e) => { // 메시지가 왔을 때
                 console.log('onmessage', e.data);
-                document.querySelector('.notiAction1').style.display = 'block';
+                document.querySelector('.onmessage').style.display = 'block';
             }
 
         }
+
+        // 2) 알림 띄우기
+        // 카테고리 세팅
+        async function notiAction(){
+
+            if (document.getElementById('notibox').style.display === "none") {
+                console.log(user.username);
+                const url = [[@{/api/selectnoti.json}]] + `?id=${user.username}`;
+                console.log(url);
+                const headers = {"Content-Type":"application/json"};
+                const {data} = await axios.get(url, {headers});
+
+                console.log(data.list);
+
+                let str = "";
+                for(let one of data.list) {
+                    str += `<div>${one.content}</div>`;
+                    str += `<div class="notiLine"></div>`;
+                }
+
+                const notibox = document.getElementById('notibox');
+                notibox.innerHTML = '';
+                notibox.innerHTML += str;
+
+                document.getElementById('notibox').style.display = 'block';
+                document.querySelector('.onmessage').style.display = 'none';
+            }
+            else {
+                document.getElementById('notibox').style.display = 'none';
+            }
+            
+        }
+        
         // 알림기능
     </script>
 
