--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -229,6 +229,11 @@
                     document.getElementById("lbl_check").style.color = 'gray';
                     document.getElementById("id").className = 'form-control';
                 }
+                else {
+                    document.getElementById("lbl_check").innerText = '사업자번호 ( "-"는 생략 )';
+                    document.getElementById("lbl_check").style.color = 'gray';
+                    document.getElementById("id").className = 'form-control';
+                }
             }
         }
 
